fix(adminv2): #CAV2-468, remove useless scrollbar in group-picker

--- a/admin/src/main/resources/public/styles/admin.scss
+++ b/admin/src/main/resources/public/styles/admin.scss
@@ -883,7 +883,7 @@ lightbox {
     padding: 20px 40px!important;
     border-radius: 3px;
     box-shadow: 2px 2px 10px $shadow-dark;
-    max-height: 600px !important;
+    max-height: 800px !important;
     overflow: auto !important;
     & > i {
       &::after {
